--- a/_posts/你为何如此焦虑.md
+++ b/_posts/你为何如此焦虑.md
@@ -8,10 +8,10 @@ categories: 思考
 
 **王小波**{% endcenterquote %}
 
-从某种意义上来说，这句话似乎是正确的。世事无常，往往事情的发展总出人意料，令人啼笑皆非。且不问结果如何，尽自己之所能，积极地面对。古语有言，尽人事听天命，大概如此。  
-<!--more-->
-做事情太过于急功近利和急于求成，尚未开始便想到马上有结果和好处，通常会导致焦虑心态。  
+从某种意义上来说，这句话似乎是正确的。
 
+做事情太过于急功近利和急于求成，尚未开始便想到马上有结果和好处，通常会导致焦虑心态。  
+<!--more-->
 > 所有痛苦的感觉都与摆脱痛苦的愿望密不可分，所有快乐的观念都是与享受快乐的愿望分不开。所以，所有愿望全都意味着一种需求，而所有的需求都是痛苦的。因此，我们的痛苦正是产生于我的愿望和能力的不相称。一个有感觉的人，在他的能力扩大到了他的欲望的时候，就将变作一个完完全全快乐的人了。    — 卢梭 『爱弥儿』
 
 能力和欲望，是应该好好衡量反思比较一下二者的距离。
