--- a/_posts/你为何如此焦虑.md
+++ b/_posts/你为何如此焦虑.md
@@ -3,7 +3,8 @@ date: 2016-01-29 08:33:32
 tags: 思考  
 categories: 思考
 ---
-![海那边](http://7xqdqt.com1.z0.glb.clouddn.com/2016%2F01%2F29ltn_890728ee06fd1d1421bf125b35ebbeb020140930085901.jpeg)
+<img src="http://7xqdqt.com1.z0.glb.clouddn.com/2016%2F01%2F29ltn_890728ee06fd1d1421bf125b35ebbeb020140930085901.jpeg" class="full-image" />
+
 {% centerquote %}人的一切痛苦，本质上都是对自己无能的愤怒。  
 
 **王小波**{% endcenterquote %}
@@ -12,7 +13,7 @@ categories: 思考
 
 做事情太过于急功近利和急于求成，尚未开始便想到马上有结果和好处，通常会导致焦虑心态。  
 <!--more-->
-> 所有痛苦的感觉都与摆脱痛苦的愿望密不可分，所有快乐的观念都是与享受快乐的愿望分不开。所以，所有愿望全都意味着一种需求，而所有的需求都是痛苦的。因此，我们的痛苦正是产生于我的愿望和能力的不相称。一个有感觉的人，在他的能力扩大到了他的欲望的时候，就将变作一个完完全全快乐的人了。    — 卢梭 『爱弥儿』
+> 所有痛苦的感觉都与摆脱痛苦的愿望密不可分，所有快乐的观念都是与享受快乐的愿望分不开。所以，所有愿望全都意味着一种需求，而所有的需求都是痛苦的。因此，我们的痛苦正是产生于我的愿望和能力的不相称。一个有感觉的人，在他的能力扩大到了他的欲望的时候，就将变作一个完完全全快乐的人了。    — 卢梭 『**爱弥儿**』
 
 能力和欲望，是应该好好衡量反思比较一下二者的距离。
 
@@ -20,6 +21,6 @@ categories: 思考
 
 虽然平衡很难，但是也要尽量让自己的心态良好，至少不那么极端。
 
-> 大树有大树的长法;小草有小草的长法;这世上大部分的人，都是小草。你不是孤独的。— 龙应台 『亲爱的安德烈』
+> 大树有大树的长法;小草有小草的长法;这世上大部分的人，都是小草。你不是孤独的。— 龙应台 『**亲爱的安德烈**』
 
 改变世界很难，可我们可以去改变自己。
