--- a/_posts/伸手摘下了.md
+++ b/_posts/伸手摘下了.md
@@ -1,7 +1,7 @@
 title: 伸手摘下了
 date: 2016-01-26 15:14:09
 tags: 音乐
-categories: 生活
+categories: 随笔
 ---
 一首不错的歌：[**伸手摘下了** *By Lu1*](http://music.163.com/#/song?id=32619801)
 
