--- a/_posts/我和流沙.md
+++ b/_posts/我和流沙.md
@@ -1,10 +1,10 @@
 title: "我和流沙"
 date: 2016-02-01 10:55:11
-tags: [思考]
-categories: 思考
+tags: 思考
+categories: 随笔
 ---
 
-<img src="http://7xqdqt.com1.z0.glb.clouddn.com/2016%2F02%2F01lnnvwit.jpg" class="full-image" />
+![](http://7xqdqt.com1.z0.glb.clouddn.com/2016%2F02%2F01lnnvwit.jpg)
 
 这么多年来，一直是我脚下的流沙裹着我四处漂泊，它也不淹没我，它只是时不时提醒我，你没有别的选择，否则你就被风吹走了。我就这么浑浑噩噩地度过了我所有热血的岁月，被裹到东，被裹到西，连我曾经所鄙视的种子都不如。
 <!--more-->
