--- a/_posts/你为何如此焦虑.md
+++ b/_posts/你为何如此焦虑.md
@@ -1,13 +1,11 @@
 title: 你为何如此焦虑  
 date: 2016-01-29 08:33:32  
 tags: 思考  
-categories: 思考
+categories: 随笔
 ---
-<img src="http://7xqdqt.com1.z0.glb.clouddn.com/2016%2F01%2F29ltn_890728ee06fd1d1421bf125b35ebbeb020140930085901.jpeg" class="full-image" />
+![](http://7xqdqt.com1.z0.glb.clouddn.com/2016%2F01%2F29ltn_890728ee06fd1d1421bf125b35ebbeb020140930085901.jpeg)
 
-{% centerquote %}人的一切痛苦，本质上都是对自己无能的愤怒。  
-
-**王小波**{% endcenterquote %}
+> 人的一切痛苦，本质上都是对自己无能的愤怒。  **王小波**
 
 从某种意义上来说，这句话似乎是正确的。
 
