--- a/_posts/申请个人域名记录.md
+++ b/_posts/申请个人域名记录.md
@@ -22,7 +22,7 @@ categories: 技术
 
 ### 添加CNAME
 
-1. 在你的github.page的repo根目录下添加CNAME文件，内容填写为你的域名. eg: gondole.me 无需wwww。
+1. 在你的github.page的repo根目录下添加CNAME文件，内容填写为你的域名. eg: gondole.me 无需www。
 
 ### DNS
 
