--- a/_posts/书摘：如何阅读一本书.md
+++ b/_posts/书摘：如何阅读一本书.md
@@ -1,6 +1,6 @@
-title: 如何阅读一本书 书摘
+title: 书摘：如何阅读一本书
 date: 2016-03-20 09:43:07
-tags: [kindle, 阅读]
+tags: [书摘, 阅读]
 categories: 读书
 ---
 了解一下大概的阅读方法，不过感觉很多书也只需检测阅读就足够了吧。
