--- a/_posts/书摘：读书与做人.md
+++ b/_posts/书摘：读书与做人.md
@@ -1,6 +1,6 @@
-title: '季羡林:读书与做人 书摘'
+title: 书摘：季羡林-读书与做人
 date: 2016-03-20 10:08:03
-tags: [kindle, 阅读]
+tags: [书摘, 阅读]
 categories: 读书
 ---
 1. 做人要老实，学外语也要老实。学外语没有什么万能的窍门。俗语说：“书山有路勤为径，学海无涯苦作舟。”这就是窍门。
